<resources>
    <string name="app_name">Mobile-Ewaste</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="personal_info_title">Personal Information</string>
    <string name="name">User</string>
    <string name="email">Email</string>
    <string name="hint_email">user@example.com</string>
    <string name="phone">Phone</string>
    <string name="hint_phone">+65 - .... ....</string>
    <string name="address">Address</string>
    <string name="hint_address">123 Main St, City</string>
    <string name="redeem_reward">Redeem Reward</string>
    <string name="load_redemptions">Loading redemptions...</string>
    <string name="no_redeem">No rewards redeemed yet.</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_logout">Log Out</string>
</resources>